--- a/index.html
+++ b/index.html
@@ -6,14 +6,15 @@
 
 <head>
 	<!---Заголовок страницы браузера--->
-	<title>Мой первый проект</title>
+	<title>Мой первый проект!</title>
 	<!---Кодировка страницы--->
 	<meta http-equiv="Content type" content="text/html;charset=UTF-8" />
 </head>
 <!---Отображаемое тело страницы--->
 
 <body>
-	<h1>Не брейте бобров</h1>
+	<h1>Не брейте бобров!</h1>
+	<h2>Test2</h2>
 </body>
 
 </html>
